# NeoC

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  NeoCConfig.cmake  README.md  install.sh  neoc.pc.in
examples/: CMakeLists.txt  Makefile  basic_example.c  comprehensive_example.c  crypto_example.c  encoding_example.c  rpc_client_advanced.c  transaction_example.c  wallet_example.c
include/neoc/: neo_constants.h  neoc.h  neoc_error.h  neoc_memory.h
include/neoc/client/: neo_client.h
include/neoc/contract/: contract_error.h  contract_management.h  contract_manifest.h  contract_parameter.h  fungible_token.h  gas_token.h  iterator.h  native_contract.h  native_contracts.h  nef_file.h  neo_token.h  neoc_name_service.h  neoc_token.h  neoc_uri.h  nns_name.h  non_fungible_token.h  policy_contract.h  role_management.h  smart_contract.h  token.h
include/neoc/contracts/: deployment.h
include/neoc/crypto/: base64.h  bip32.h  bip32_ec_key_pair.h  bip32_eckey_pair.h  bip39.h  ec_key_pair.h  ec_point.h  ec_public_key.h  ecdsa_signature.h  ecdsasignature.h  eckey_pair.h  ecpoint.h  hash.h  hash256.h  neoc_hash.h  nep2.h  scrypt_params.h  sha256.h  sign.h  wif.h
include/neoc/encoding/: base58.h
include/neoc/protocol/: contract_response_types.h  json_rpc.h  neo_c.h  neo_c_config.h  neo_c_express.h  neo_c_service.h  protocol_error.h  response_types.h  rpc_client.h  service.h  (+2 more)
src/: neo_constants.c  neoc.c  neoc_error.c  neoc_memory.c
src/contract/: contract_error.c  contract_management.c  contract_manifest.c  contract_parameter.c  fungible_token.c  gas_token.c  iterator.c  nef_file.c  neo_token.c.bak  neoc_name_service.c  neoc_token.c  neoc_uri.c  nns_name.c  non_fungible_token.c  policy_contract.c  role_management.c  smart_contract.c  token.c
src/contracts/: deployment.c
src/crypto/: bip32.c  bip39.c  ec_key_pair.c  ecdsa_signature.c  ecdsasignature.c  eckey_pair.c  ecpoint.c  hash.c  neoc_hash.c  nep2.c  scrypt_params.c  sha256.c  sign.c  wif.c
src/protocol/: json_rpc.c.old  neo_c.c  neo_c_config.c  neo_c_express.c  neo_c_service.c  protocol_error.c  response_types.c  response_types.c.disabled  rpc_client.c  service.c  stack_item.c
src/script/: interop_service.c  invocation_script.c  opcode.c  script_builder.c  script_builder_full.c  script_helper.c  script_reader.c  verification_script.c
src/serialization/: binary_reader.c  binary_writer.c  neo_serializable.c
src/transaction/: account_signer.c  contract_parameters_context.c  contract_signer.c  neo_transaction.c  signer.c  transaction.c  transaction_builder.c  transaction_error.c  witness.c  witness_scope.c  witness_scope_impl.c
src/types/: call_flags.c  contract_parameter.c  contract_parameter_type.c  neoc_hash160.c  neoc_hash256.c  neoc_hash_extra.c  neoc_types.c  neoc_vm_state_type.c  neoc_vm_state_type_alt.c  node_plugin_type.c
src/utils/: array.c  bytes.c  decode.c  enum.c  json.c  neoc_array.c  neoc_base58.c  neoc_base64.c  neoc_bytes.c  neoc_bytes_utils.c  neoc_hex.c  numeric.c  string.c  url_session.c
src/wallet/: account.c  bip39_account.c  multi_sig.c  nep6.c  wallet.c  wallet_error.c
tests/: CMakeLists.txt  Makefile  run_all_tests.sh  run_memory_tests.sh  run_tests.sh  test_account.c  test_account_comprehensive.c  test_base58.c  test_base64.c  test_basic.c  test_binary_reader.c  test_binary_writer.c  test_bip32.c  test_bip32_simple.c  test_bip39.c  test_bip39_account.c  test_bip39_vectors.c  test_comprehensive.c  test_contract_parameter.c  test_crypto_extended.c  test_crypto_simple.c  test_data_validation.c  test_ec_key_pair.c  test_enum_types.c  test_find_states_response.c  test_gas_token_comprehensive.c  test_hash160.c  test_hash256.c  test_integration.c  test_integration_comprehensive.c  test_math_utils.c  test_memory.c  test_memory_comprehensive.c  test_multi_sig.c  test_neo_c_client.c  test_neo_c_express.c  test_neo_constants.c  test_neo_get_mem_pool.c  test_neo_get_nep11_balances.c  test_neo_get_nep11_transfers.c  (+24 more)
tests/benchmarks/: benchmark_crypto.c  benchmark_serialization.c
tests/crypto/: test_complete_crypto.c  test_ec_key_pair.c  test_wif.c
tests/integration/: integration_test_framework.h  test_e2e_scenarios.c  test_error_handling.c  test_smart_contract_integration.c  test_transaction_integration.c  test_wallet_integration.c
tests/transaction/: test_signer.c
tests/unit/: CMakeLists.txt  Makefile  run_all_tests.sh  test_test_properties.c
tests/unit/contract/: test_contract_management.c  test_fungible_token.c  test_gas_token.c  test_n_n_s_name.c  test_nef_file.c  test_neo_name_service.c  test_neo_token.c  test_neo_u_r_i.c  test_non_fungible_token.c  test_policy_contract.c  test_role_management.c  test_smart_contract.c  test_token.c
tests/unit/crypto/: test_base64.c  test_bip32_e_c_key_pair.c  test_bip32_ec_key_pair.c  test_e_c_key_pair.c  test_n_e_p2.c  test_scrypt_params.c  test_sign.c  test_w_i_f.c
tests/unit/crypto/helpers/: test_base58.c  test_r_i_p_e_m_d160.c  test_ripemd160.c
tests/unit/helpers/: test_j_s_o_n.c  test_mock_blocks.c  test_mock_neo_swift.c  test_mock_u_r_l_session.c
tests/unit/protocol/: test_http_service.c  test_json_rpc2_0_rx.c  test_request.c  test_response.c
tests/unit/protocol/core/: test_contract_manifest.c  test_http_service.c
tests/unit/protocol/core/stackitem/: test_stack_item.c
tests/unit/script/: test_invocation_script.c  test_script_builder.c  test_script_reader.c  test_verification_script.c
tests/unit/serialization/: test_binary_reader.c  test_binary_writer.c  test_var_size.c
tests/unit/transaction/: test_serializable_transaction.c  test_signer.c  test_transaction_builder.c  test_witness.c  test_witness_scope.c
tests/unit/types/: test_contract_parameter.c  test_enum_type.c  test_hash160.c  test_hash256.c
tests/unit/wallet/: test_account.c  test_bip39_account.c  test_n_e_p6_wallet.c  test_nep6_wallet.c  test_wallet.c
tests/unit/witnessrule/: test_witness_rule.c
tests/wallet/: test_complete_wallet.c
tools/: CMakeLists.txt  README.md  neoc-audit.c  neoc-cli.c  neoc-debug.c  neoc-migrate.c  neoc-monitor.c  neoc-profiler.c
(+221 files in other folders)
